---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: ????
  Changes:
    - Replace "cargo rocket section" with "cargo rocket" in SE and SE+K2 presets
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2022-01-16
  Changes:
    - Add "Advanced pickaxe" to K2 and SE+K2 presets
    - Add debug commands to help debug and fix future crashes (use /h in-game to see them)
  Bugfixes:
    - Fix kill milestones unable to be imported
    - Attempt to fix a rare crash when a player's GUI becomes invalid for an unknown reason
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-11-29
  Bugfixes:
    - Fix crash when using research milestones
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021-11-28
  Features:
    - Add "Initial preset" mod setting. You can paste an exported preset string that Milestones will load at the beginning of every new game. Useful for speedrunning practice.
    - Add "Kill" milestone type. Used to track biter kills (or any other kills, such as killing yourself with locomotives :) )
    - Add preset addons for Bob's Enemies, Armoured Biters, Cold Biters, Explosive Biters
  Changes:
    - Add kill milestones to existing presets
  Bugfixes:
    - Fix crash when GUI was opened after being closed in some way that didn't trigger the on_gui_closed event
    - Fix crash when using the import feature, introduced in 1.0.10
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2021-11-20
  Changes:
    - Add missing holmium ingot to SE+K2 preset
  Bugfixes:
    - Import-export window now gets a scrollbar instead of expanding beyond the screen for large milestone lists