@@ -22,6 +22,8 @@ milestones_toggle_gui=Show milestones
 title=Milestones
 incomplete_label=Incomplete
 completed_label=Completed at 
+researched_label=Researched at 
+killed_label=Killed at 
 completed_before_tooltip=Estimation based on the limited production history statistics accessible to mods
 invalid_entry=Invalid: 
 type_item=Item
