@@ -2,6 +2,7 @@
 Version: 1.1.3
 Date: ????
   Changes:
+    - Labels now say "Killed at" and "Researched at" for kills and technologies
     - Replace "cargo rocket section" with "cargo rocket" in SE and SE+K2 presets
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
